RESOLVED FIXED65224
[chromium] REGRESSION(90963): Content layers are not redrawn after losing the compositor context
https://bugs.webkit.org/show_bug.cgi?id=65224
Summary [chromium] REGRESSION(90963): Content layers are not redrawn after losing the...
James Robinson
Reported 2011-07-26 18:38:07 PDT
[chromium] REGRESSION(90963): Content layers are not redrawn after losing the compositor context
Attachments
Patch (2.33 KB, patch)
2011-07-26 18:38 PDT, James Robinson
no flags
James Robinson
Comment 1 2011-07-26 18:38:52 PDT
Kenneth Russell
Comment 2 2011-07-26 18:44:57 PDT
Comment on attachment 102087 [details] Patch Looks fine.
WebKit Review Bot
Comment 3 2011-07-26 20:48:40 PDT
Comment on attachment 102087 [details] Patch Clearing flags on attachment: 102087 Committed r91823: <http://trac.webkit.org/changeset/91823>
WebKit Review Bot
Comment 4 2011-07-26 20:48:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.