[chromium] REGRESSION(90963): Content layers are not redrawn after losing the compositor context https://bugs.webkit.org/show_bug.cgi?id=65224

Patch by James Robinson <jamesr@chromium.org> on 2011-07-26
Reviewed by Kenneth Russell.

There's no automated way to test lost compositor contexts (yet), but to test manually open up the poster circle
page and kill the GPU process.

* platform/graphics/chromium/ContentLayerChromium.cpp:
(WebCore::ContentLayerChromium::cleanupResources):
* platform/graphics/chromium/ContentLayerChromium.h:

Canonical link: https://commits.webkit.org/80990@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91823 268f45cc-cd09-0410-ab3c-d52691b4dbfc